<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_choose"
        tools:context=".choose">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timerText2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            android:textSize="40sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#00BCD4"
            android:text="@string/choose_title" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.013"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="131dp"
            android:layout_height="63dp"
            android:id="@+id/button2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.674"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.121" android:text="@string/three"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="133dp"
            android:layout_height="63dp"
            android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/button2" app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.67" app:layout_constraintVertical_bias="0.0"
            android:text="@string/five"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="130dp"
            android:layout_height="66dp"
            android:id="@+id/button4" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/button2"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0" android:text="@string/ten"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button3" app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button4" app:layout_constraintBottom_toBottomOf="@+id/button4"
            android:text="@string/fifteen"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/happy_world"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintVertical_bias="0.254"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="#00BCD4"
            android:text="@string/five_save" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/button3" app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="#00BCD4"
            android:text="@string/five_save" android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="#00BCD4"
            android:text="@string/five_save" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textColor="#00BCD4"
            android:text="@string/five_save" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2" app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.533"/>
    <TextView
            android:text="Shower time? (in minutes)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="@+id/editText3" app:layout_constraintBottom_toTopOf="@+id/editText3"
            android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="15"
            android:ems="10"
            android:id="@+id/showerTimeText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>